--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "vue": "^3.2.13",
     "vue-router": "^4.2.2",
+    "vue3-infinite-scroll": "^0.0.1-security",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
