--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.8.3",
     "crypto-js": "^4.1.1",
     "element-plus": "^2.3.6",
+    "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "less-loader": "^11.1.3",
     "mysql": "^2.18.1",
     "vue": "^3.2.13",
@@ -24,6 +26,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jest": "^27.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.3.1",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
