--- a/backend/package.json
+++ b/backend/package.json
@@ -5,18 +5,32 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./src/main.js"
+    "dev": "nodemon --watch src/**/*.ts --exec \\\"ts-node\\\" src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.17",
+    "@types/sequelize": "^4.28.15",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.4",
-    "sequelize": "^6.32.0"
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0",
+    "ts-node": "^10.9.1"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.3",
+    "@types/body-parser": "^1.19.2",
+    "@types/cors": "^2.8.14",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
+    "@types/node": "^20.6.0"
   }
 }
