--- a/package.json
+++ b/package.json
@@ -19,15 +19,16 @@
     "less-loader": "^11.1.3",
     "mysql": "^2.18.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.2.2",
+    "vue-router": "^4.2.4",
     "vue3-infinite-scroll": "^0.0.1-security",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^27.5.2",
     "@types/jsonwebtoken": "^9.0.2",
-    "@types/node": "^20.3.1",
+    "@types/jwt-decode": "^3.1.0",
+    "@types/node": "^20.6.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
